<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Guess The Number</string>

    <!-- Main Menu -->
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="instructions">Instructions</string>
    <string name="credits">Credits</string>
    <string name="quit">Quit</string>
    <string name="quickGame">Quick game</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="Settings">Settings</string>
    <string name="version">Version %1$s</string>

    <!-- Toasts -->
    <string name="toast_valid_number_value">Number must be between %1$d and %2$d</string>
    <string name="toast_valid_enter_number">You must enter a number</string>
    <string name="toat_must_enter_name">You must enter a name!</string>
    <string name="toats_rate_app">Thank you to rate this app :)</string>
    <string name="toast_share_app">Thank you to share this app :)</string>
    <string name="toast_connect_for_achievements">Connect with Google+ to earn achievements</string>
    <string name="toast_earn_achievements_by_connecting">You can earn achievements by connecting with Google+</string>

    <!-- Insctructions -->
    <string name="instructions_01">Guess the number (between %1$d and %2$d) that has been chosen by the computer.</string>

    <!-- Credits -->
    <string name="devMail" translatable="false">bryan@maarti.net</string>
    <string name="author">Author</string>
    <string name="contact">Contact</string>
    <string name="devFullName" translatable="false">Bryan MARTINET</string>
    <string name="appWebSiteUrl" translatable="false">http://android.maarti.net</string>
    <string name="website">Site</string>
    <string name="devWebSiteUrl">http://bryan.maarti.net/?lang=en#skills</string>
    <string name="contactMailObject">Contact about your app</string>

    <!-- Scores -->
    <string name="scores">Scores</string>
    <string name="previousSign" translatable="false"><![CDATA[<<]]></string>
    <string name="nextSign" translatable="false"><![CDATA[>>]]></string>
    <plurals name="tryNumber">
        <item quantity="one">%1$d try</item>
        <item quantity="other">%1$d tries</item>
    </plurals>

    <!-- Game -->
    <string name="more">It\'s more than %1$d!</string>
    <string name="less">It\'s less than %1$d!</string>
    <string name="win">Congratulations %1$s, you won in %2$s!</string>
    <string name="submit">Submit</string>
    <string name="signPlus" translatable="false">+</string>
    <string name="signMinus" translatable="false">-</string>
    <string name="signEqual" translatable="false">=</string>
    <string name="signInterro" translatable="false">\?</string>
    <string name="choose_number">Type a number</string>
    <string name="newGame">New game</string>
    <string name="numberIndication" translatable="false">%1$d <![CDATA[<]]> ? \u2264 %2$d</string>  <!--TODO inférieur ou équal n'est vrai qu'au début... -->
    <string name="victory">Victory</string>
    <string name="playAgain">Play again</string>
    <string name="home">Home</string>
    <plurals name="nbTry">
        <item quantity="one">Try : %1$d</item>
        <item quantity="other">Tries : %1$d</item>
    </plurals>

    <!-- Share / Rate -->
    <string name="shareSubject">Try this app! :)</string>
    <string name="shareText">Try this Android app! :)\nGuess The Number\n\nhttp://play.google.com/store/apps/details?id=net.maarti.guessthenumber</string>
    <string name="shareVia">Share via</string>

    <!-- Settings -->
    <string name="sound">Sound</string>
    <string name="soundsAllowed">Sounds allowed</string>
    <string name="noSound">No sound</string>
    <string name="vibrationAllowed">Vibration allowed</string>
    <string name="noVibration">No vibration</string>
    <string name="User">User</string>
    <string name="name">Name</string>
    <string name="yourName">Your name</string>
    <string name="defautUsername">Anonymous</string>

    <!-- Instruction -->
    <string name="instruction_rangeNumbers"><u>Ranges of numbers depending on the difficulty:</u></string>
    <string name="instruction_details">The system choose a random number. You must guess it by suggesting numbers and the system will tell you if the correct response is higher or lower.</string>
    <string name="instruction_rangeEasy" translatable="false">1 – 100</string>
    <string name="instruction_rangeMedium" translatable="false">1 – 1 000</string>
    <string name="instruction_rangeHard" translatable="false">1 – 10 000</string>
    <string name="instruction_detail2">You have to guess the correct number as fast as possible and with the least possible attempts to acces the scoreboard!</string>
    <string name="instruction_username">You can change your username in the settings.\n\nHave fun!</string>
    <string name="signin_other_error">There was an issue with sign-in, please try again later.</string>
    <string name="signin_failure">Unable to sign in.</string>
    <string name="disconnect">Sign Out</string>


</resources>
