<?xml version="1.0" encoding="utf-8"?>
<!-- couleurs inspirées de http://www.makeuseof.com/tag/make-uniquely-gorgeous-android-home-screen/ -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="20">

        <Button
            style="@style/mainMenuButton"
            android:layout_height="match_parent"
            android:text="@string/instructions"
            android:layout_weight="40"
            android:background="@drawable/button_background_instructions"
            android:textSize="25sp"
            android:onClick="onClickInstruction"/>

        <ImageButton
            style="@style/mainMenuButton"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:src="@drawable/settings"
            android:background="@drawable/button_background_settings"
            android:textSize="25sp"
            android:contentDescription="@string/Settings"
            android:onClick="onClickSettings"/>
    </LinearLayout>

    <RelativeLayout
        style="@style/mainMenuButton"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="8"
        android:background="@drawable/button_background_title">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/textViewAppTitle"
            android:textSize="30sp"
            style="@style/titleShadowEffect"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/versionNumber"
            android:textColor="@color/DarkGray"
            android:layout_below="@id/textViewAppTitle"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

    <Button
        style="@style/mainMenuButton"
        android:text="@string/quickGame"
        android:layout_weight="40"
        android:background="@drawable/button_background_quick_game"
        android:textSize="50sp"
        android:id="@+id/buttonQuickGame"
        android:onClick="onClickQuickGame"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="25">
    <ImageButton
        style="@style/mainMenuButton"
        android:layout_height="match_parent"
        android:layout_weight="35"
        android:background="@drawable/button_background_share"
        android:src="@drawable/share"
        android:contentDescription="@string/share"
        android:onClick="onClickShare"/>
        <Button
            style="@style/mainMenuButton"
            android:layout_height="match_parent"
            android:text="@string/scores"
            android:layout_weight="25"
            android:background="@drawable/button_background_scores"
            android:textSize="26sp"
            android:onClick="onClickScores"/>
        <ImageButton
            style="@style/mainMenuButton"
            android:layout_height="match_parent"
            android:layout_weight="40"
            android:background="@drawable/button_background_rate"
            android:src="@drawable/rating"
            android:contentDescription="@string/rate"
            android:onClick="onClickRate"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="12">
    <Button
        style="@style/mainMenuButton"
        android:layout_height="match_parent"
        android:textColor="@color/White"
        android:text="@string/credits"
        android:layout_weight="35"
        android:background="@drawable/button_background_credits"
        android:textSize="20sp"
        android:onClick="onClickCredits"/>

    <Button
        style="@style/mainMenuButton"
        android:layout_height="match_parent"
        android:textColor="@color/White"
        android:text="@string/quit"
        android:layout_weight="65"
        android:background="@drawable/button_background_quit"
        android:textSize="20sp"
        android:onClick="onClickQuit"/>
        </LinearLayout>
</LinearLayout>