<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.maarti.guessthenumber.CreditActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/credits"
            android:id="@+id/textViewCreditTitle"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewCreditTitle"
            android:id="@+id/Table1"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/author"
                    android:id="@+id/textViewCreditAuthorLabel"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/devFullName"
                    android:id="@+id/textViewCreditAuthor" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/contact"
                    android:id="@+id/textViewCreditEmailLabel" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/devMail"
                    android:id="@+id/textViewCreditEmail"
                    android:onClick="onClickDevMail"/>
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/website"
                    android:id="@+id/textViewCreditWebsiteLabel" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/appWebSiteUrl"
                    android:id="@+id/textViewCreditWebsite"
                    android:onClick="onClickAppSite"/>
            </TableRow>
        </TableLayout>

        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="@string/aboutMe"
             android:id="@+id/textViewCreditAboutMe"
             android:layout_below="@id/Table1"/>

         <WebView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/webViewCredit"
             android:layout_below="@+id/textViewCreditAboutMe"
             android:layout_centerHorizontal="true"
             android:minHeight="250dp"/>-->

        <!--TODO To support me : Buy app or give Paypal -->

    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/bannerCredit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-4442511984442196/4629254064"/>

</RelativeLayout>
