<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/easy"
        android:id="@+id/buttonEasy"
        android:onClick="onClickNewGame"
        android:gravity="center"
        android:textSize="36sp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/easy_textview_selector"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/medium"
        android:id="@+id/buttonMedium"
        android:onClick="onClickNewGame"
        android:gravity="center"
        android:textSize="36sp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/medium_textview_selector"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/hard"
        android:id="@+id/buttonHard"
        android:onClick="onClickNewGame"
        android:gravity="center"
        android:textSize="36sp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@drawable/hard_textview_selector"/>


</LinearLayout>